# wta-db

./: README.md  WTA scraper.ipynb  create_db.sql  pyproject.toml  scripts.py  washed_out_roads.json  wta_trail_list.json
