[tool.poetry]
name = "wta_list"
version = "0.1.0"
description = ""
authors = ["luggage-problem"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
lxml = "^4.6.3"
ipykernel = "^6.2.0"
jupyter = "^1.0.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"